# swesr

./: README.md  pyproject.toml
src/comparator/: __init__.py  cli.py  core.py  data_processing.py  run.py  utils.py  visualization.py
