[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comparator"  # This should match your main package name
version = "0.1.0"
description = "Package for analyzing snow data in the Skagit River Basin"
authors = [
    {name = "Shivam Agarwal", email = "shivam96@uw.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dask",
    "fsspec",
    "folium",
    "watermark",
    "earthaccess",
    "xarray",
    "pandas",
    "geopandas",
    "matplotlib",
    "rioxarray",
    "python-dotenv",
    "shapely",
    "netCDF4"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "nox",
]

[project.entry-points."console_scripts"]
comparator = "comparator.cli:main"

[tool.setuptools]
packages = ["comparator"]
package-dir = {"" = "src"}